mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:4.0
          name: mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-provision-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-provision-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
